--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.3",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "i18next": "^17.0.16",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-i18next": "^8.3.8",
+    "react-jss": "^10.0.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
