--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "i18next": "^17.0.16",
+    "material-table": "^1.50.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-i18next": "^8.3.8",
