--- a/package.json
+++ b/package.json
@@ -5,20 +5,27 @@
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@syncfusion/ej2-data": "^17.2.47",
+    "@syncfusion/ej2-dropdowns": "^17.2.49",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "i18next": "^17.0.16",
     "material-table": "^1.50.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-google-maps": "^9.4.5",
     "react-i18next": "^8.3.8",
     "react-jss": "^10.0.0",
+    "react-modal": "^3.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-signature-canvas": "^1.0.3",
+    "react-signature-pad": "0.0.6",
     "react-table": "^6.10.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "use-position": "0.0.6",
     "yup": "^0.27.0"
   },
   "scripts": {
