modifide Login Component & New Inspection Form - added login reducer - added method save authorized in localStorage - added modal for add Violation Items & Count - added login api service Issue: IPR-11

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-signature-canvas": "^1.0.3",
     "react-signature-pad": "0.0.6",
     "react-table": "^6.10.3",
+    "reactjs-localstorage": "0.0.7",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "use-position": "0.0.6",
