--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ip-enforcement-inspection-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://abazunts.github.io/fe-ipr",
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
@@ -9,6 +10,7 @@
     "@syncfusion/ej2-dropdowns": "^17.2.49",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
+    "gh-pages": "^2.1.1",
     "i18next": "^17.0.16",
     "material-table": "^1.50.0",
     "react": "^16.9.0",
@@ -33,6 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
